fix(front): horizontal scroll photo

--- a/frontend/src/pages/Photography/styles.css
+++ b/frontend/src/pages/Photography/styles.css
@@ -1,6 +1,6 @@
 #collection-carousel {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     transition: height 500ms;
     height: 0;
     overflow-y: auto;
